# uplink-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl  Dockerfile.sidecar  README.md  build-servers.sh  build-sidecar-docker.sh
.github/workflows/: release.yml
crates/uplink-fs/: Cargo.toml
crates/uplink-fs/src/: lib.rs  main.rs  ops.rs  protocol.rs  watcher.rs
crates/uplink-pty/: Cargo.toml
crates/uplink-pty/src/: lib.rs  main.rs  protocol.rs  terminal.rs
docs/protocol/: 01-transport-layer.md  02-ipc-layer.md  03-filesystem.md  04-extensions.md  05-terminal.md  06-environment.md  07-all-channels.md  08-authentication.md  09-extension-debug.md  10-user-profiles.md  11-download-channel.md  12-reconnection-errors.md  13-pty-host-ipc.md
src/: main.rs
vscode-server/: package-lock.json  package.json  product.json
vscode-server/extensions/typescript-language-features/src/task/: taskProvider.ts
vscode-server/remote/: package-lock.json  package.json
vscode-server/src/: tsconfig.json  tsconfig.server.json
vscode-server/src/vs/platform/files/node/uplink/: uplinkFileSystemProvider.ts  uplinkFileSystemProviderChannel.ts  uplinkFsClient.ts
vscode-server/src/vs/platform/terminal/node/: ptyHostMain.ts  ptyService.ts
vscode-server/src/vs/platform/terminal/node/uplink/: testClient.ts  uplinkPtyClient.ts  uplinkPtyService.ts  uplinkTerminalProcess.ts
vscode-server/src/vs/server/node/: serverServices.ts
