[package]
name = "remotedev-server"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"

[[bin]]
name = "uplink-server"
path = "src/main.rs"

[[bin]]
name = "sidecar-packager"
path = "src/bin/sidecar_packager.rs"
