[package]
name = "uplink-fs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uplink-fs"
path = "src/main.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = "1"
