[package]
name = "uplink-pty"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uplink-pty"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
